--- a/Pages.html
+++ b/Pages.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Test de CSS</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+ <link rel="stylesheet" href="/css/Styles.css">
 </head>
 <body>
     <div id="contenedor">
